--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.5'
     provided 'javax.annotation:jsr250-api:1.0'
 
+    compile 'com.google.code.gson:gson:2.7'
 
 //    compile group: 'com.squareup.dagger', name: 'dagger', version: '1.2.2'
 //    compile group: 'com.squareup.dagger', name: 'dagger-compiler', version: '1.2.2'
